--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-markdown": "^2.4.6",
     "react-router": "^3.0.2"
   },
   "scripts": {
