--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.17.1",
     "concurrently": "^3.4.0",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "foreman": "^2.0.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "chai-http": "^3.0.0"
+    "chai-http": "^3.0.0",
+    "faker": "^4.1.0"
   }
 }
